2003-03-31  Frank Ch. Eigler  <fche@redhat.com>
	* gcc.c (MFLIB_SPEC): Remove -ld.
	(MFWRAP_SPEC): Remove dlopen wrapping.

2003-03-31  Frank Ch. Eigler  <fche@redhat.com>

	* Makefile.am (AM_CFLAGS): Remove optimization flags.
	(HOOKOBJS): Remove dlopen hook.
	(libmudflap_la_LIBADD): Add -ldl.
	* mf-hooks.c (dlopen): Remove hook.
	* mf-impl.h (__mf_dynamic): Ditto.
	* mf-runtime.c (__mf_resolve_dynamics): Ditto.
	* Makefile.in: Regenerated.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/tree-ssa-20020619-branch@65113 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libmudflap/ChangeLog
+++ b/libmudflap/ChangeLog
@@ -1,3 +1,13 @@
+2003-03-31  Frank Ch. Eigler  <fche@redhat.com>
+
+	* Makefile.am (AM_CFLAGS): Remove optimization flags.
+	(HOOKOBJS): Remove dlopen hook.
+	(libmudflap_la_LIBADD): Add -ldl.
+	* mf-hooks.c (dlopen): Remove hook.
+	* mf-impl.h (__mf_dynamic): Ditto.
+	* mf-runtime.c (__mf_resolve_dynamics): Ditto.
+	* Makefile.in: Regenerated.
+
 2003-03-28  Frank Ch. Eigler  <fche@redhat.com>
 
 	* configure.in: Check for target gettimeofday, signal, some headers.
