* ra-build.c (update_regnos_mentioned): Handle all copy insns.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/new-regalloc-branch@65162 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog.RA
+++ b/gcc/ChangeLog.RA
@@ -1,3 +1,7 @@
+2003-04-02  Michael Matz  <matz@suse.de>
+
+	* ra-build.c (update_regnos_mentioned): Handle all copy insns.
+
 2003-02-26  Denis Chertykov  <denisc@overta.ru>
 	    Michael Matz  <matz@suse.de>
 
