2003-04-02  Frank Ch. Eigler  <fche@redhat.com>
	* mf-hooks.c (BEGIN_PROTECT): Handle startup-time reentrant
	calls specially.
	(__mf_0fn_malloc ... _munmap): New dummy backup calls.
	* mf-impl.h (CALL_BACKUP): New macros.
	* mf-runtime.c (__mf_init): Tweak __mf_state during startup.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/tree-ssa-20020619-branch@65164 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libmudflap/ChangeLog
+++ b/libmudflap/ChangeLog
@@ -1,3 +1,11 @@
+2003-04-02  Frank Ch. Eigler  <fche@redhat.com>
+
+	* mf-hooks.c (BEGIN_PROTECT): Handle startup-time reentrant
+	calls specially.
+	(__mf_0fn_malloc ... _munmap): New dummy backup calls.
+	* mf-impl.h (CALL_BACKUP): New macros.
+	* mf-runtime.c (__mf_init): Tweak __mf_state during startup.
+
 2003-03-31  Frank Ch. Eigler  <fche@redhat.com>
 
 	* Makefile.am (AM_CFLAGS): Remove optimization flags.
