--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -14298,7 +14298,7 @@
   [(return)
    (unspec [(const_int 0)] UNSPEC_REP)]
   "reload_completed"
-  "rep {;} ret"
+  "nop {;} ret"
   [(set_attr "length" "1")
    (set_attr "length_immediate" "0")
    (set_attr "prefix_rep" "1")
