--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,8 @@
+2003-04-03  Jason Merrill  <jason@redhat.com>
+
+	* cvt.c (ocp_convert): Only abort if we try to convert an object
+	of TREE_ADDRESSABLE type.
+
 2003-03-01  Gabriel Dos Reis  <gdr@integrable-solutions.net>
 
 	* decl.c (duplicate_decls): Convert use of warning_with_decl() to
