2003-04-07  Frank Ch. Eigler  <fche@redhat.com>
	* mf-hooks.c (__mf_0fn_mmap): Correct return value, as per <rth>.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/tree-ssa-20020619-branch@65332 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libmudflap/ChangeLog
+++ b/libmudflap/ChangeLog
@@ -1,3 +1,7 @@
+2003-04-07  Frank Ch. Eigler  <fche@redhat.com>
+
+	* mf-hooks.c (__mf_0fn_mmap): Correct return value, as per <rth>.
+
 2003-04-02  Frank Ch. Eigler  <fche@redhat.com>
 
 	* mf-hooks.c (BEGIN_PROTECT): Handle startup-time reentrant
