--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,4 +1,40 @@
-2003-04-05  Jakub Jelinek  <jakub@redhat.com>
+2003-03-29  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
+
+	* gcc.c-torture/execute/20020307-2.x: New file, XFAIL mips-irix6.
+
+2003-03-29  Arpad Beszedes <beszedes@cc.u-szeged.hu>
+
+	PR middle-end/9967
+	* gcc.c-torture/execute/stdio-opt-1.c: Adjust test for change to
+	builtin fputs.
+
+2003-03-29  Mikulas Patocka <mikulas@artax.karlin.mff.cuni.cz>
+
+	* gcc.dg/20030323-1.c: New test.
+
+2003-03-28  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* gcc.dg/ultrasp8.c: New test.
+
+2003-03-28  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* gcc.dg/ultrasp7.c: New test.
+
+2003-03-28  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* gcc.dg/sparc-dwarf2.c: New test.
+
+2003-03-26  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* gcc.dg/ultrasp6.c: New test.
+
+2003-03-25  Eric Botcazou  <ebotcazou@libertysurf.fr>
+
+	* gcc.dg/i386-signbit-1.c: Tweak options.
+	* gcc.dg/i386-signbit-2.c: New test.
+	* gcc.dg/i386-signbit-3.c: New test.
+
+2003-04-05
 
 	* gcc.dg/20030405-1.c: New test.
 
