* ra-rewrite.c (find_move, init_find_move, insn2move): 	Removed. 	(coalesce_spill_slot): Use copy_insn_p for detecting move 	insns. 	(assign_stack_slots_1): Don't use insn2move, init_find_move.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/new-regalloc-branch@65427 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog.RA
+++ b/gcc/ChangeLog.RA
@@ -1,3 +1,11 @@
+2003-04-10  Denis Chertykov  <denisc@overta.ru>
+
+	* ra-rewrite.c (find_move, init_find_move, insn2move):
+	Removed.
+	(coalesce_spill_slot): Use copy_insn_p for detecting move
+	insns.
+	(assign_stack_slots_1): Don't use insn2move, init_find_move.
+
 2003-04-02  Michael Matz  <matz@suse.de>
 
 	* ra-build.c (update_regnos_mentioned): Handle all copy insns.
