--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-14  Ulrich Weigand  <uweigand@de.ibm.com>
+
+	* Makefile.in (libgcc.mk): Depend on specs.
+
 2003-04-03  Jason Merrill  <jason@redhat.com>
 
 	PR c/10175
