--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -1170,12 +1170,12 @@
   switch (get_attr_type (insn))
     {
     case TYPE_SSEMOV:
-      if (get_attr_mode (insn) == TImode)
+      if (get_attr_mode (insn) == MODE_TI)
         return "movdqa\t{%1, %0|%0, %1}";
       return "movd\t{%1, %0|%0, %1}";
 
     case TYPE_MMXMOV:
-      if (get_attr_mode (insn) == DImode)
+      if (get_attr_mode (insn) == MODE_DI)
 	return "movq\t{%1, %0|%0, %1}";
       return "movd\t{%1, %0|%0, %1}";
 
@@ -1209,12 +1209,12 @@
   switch (get_attr_type (insn))
     {
     case TYPE_SSEMOV:
-      if (get_attr_mode (insn) == TImode || which_alternative == 9)
+      if (get_attr_mode (insn) == MODE_TI)
         return "movdqa\t{%1, %0|%0, %1}";
       return "movd\t{%1, %0|%0, %1}";
 
     case TYPE_MMXMOV:
-      if (get_attr_mode (insn) == DImode)
+      if (get_attr_mode (insn) == MODE_DI)
 	return "movq\t{%1, %0|%0, %1}";
       return "movd\t{%1, %0|%0, %1}";
 
@@ -2215,14 +2215,7 @@
         return "fst%z0\t%y0";
 
     case 2:
-      switch (standard_80387_constant_p (operands[1]))
-        {
-        case 1:
-	  return "fldz";
-	case 2:
-	  return "fld1";
-	}
-      abort();
+      return standard_80387_constant_opcode (operands[1]);
 
     case 3:
     case 4:
@@ -2321,14 +2314,7 @@
         return "fst%z0\t%y0";
 
     case 2:
-      switch (standard_80387_constant_p (operands[1]))
-        {
-        case 1:
-	  return "fldz";
-	case 2:
-	  return "fld1";
-	}
-      abort();
+      return standard_80387_constant_opcode (operands[1]);
 
     case 3:
     case 4:
@@ -2503,14 +2489,7 @@
         return "fst%z0\t%y0";
 
     case 2:
-      switch (standard_80387_constant_p (operands[1]))
-        {
-        case 1:
-	  return "fldz";
-	case 2:
-	  return "fld1";
-	}
-      abort();
+      return standard_80387_constant_opcode (operands[1]);
 
     case 3:
     case 4:
@@ -2622,14 +2601,7 @@
         return "fst%z0\t%y0";
 
     case 2:
-      switch (standard_80387_constant_p (operands[1]))
-        {
-        case 1:
-	  return "fldz";
-	case 2:
-	  return "fld1";
-	}
-      abort();
+      return standard_80387_constant_opcode (operands[1]);
 
     case 3:
     case 4:
@@ -2869,14 +2841,7 @@
         return "fstp%z0\t%y0";
 
     case 2:
-      switch (standard_80387_constant_p (operands[1]))
-        {
-        case 1:
-	  return "fldz";
-	case 2:
-	  return "fld1";
-	}
-      break;
+      return standard_80387_constant_opcode (operands[1]);
 
     case 3: case 4:
       return "#";
@@ -2921,14 +2886,7 @@
         return "fstp%z0\t%y0";
 
     case 2:
-      switch (standard_80387_constant_p (operands[1]))
-        {
-        case 1:
-	  return "fldz";
-	case 2:
-	  return "fld1";
-	}
-      break;
+      return standard_80387_constant_opcode (operands[1]);
 
     case 3: case 4:
       return "#";
@@ -2973,14 +2931,7 @@
         return "fstp%z0\t%y0";
 
     case 2:
-      switch (standard_80387_constant_p (operands[1]))
-        {
-        case 1:
-	  return "fldz";
-	case 2:
-	  return "fld1";
-	}
-      break;
+      return standard_80387_constant_opcode (operands[1]);
 
     case 3: case 4:
       return "#";
@@ -3025,14 +2976,7 @@
         return "fstp%z0\t%y0";
 
     case 2:
-      switch (standard_80387_constant_p (operands[1]))
-        {
-        case 1:
-	  return "fldz";
-	case 2:
-	  return "fld1";
-	}
-      break;
+      return standard_80387_constant_opcode (operands[1]);
 
     case 3: case 4:
       return "#";
@@ -5570,20 +5514,6 @@
 	   (const_string "alu")))
    (set_attr "mode" "DI")])
 
-;; We may end up with add pattern and operand swapped.  Avoid it
-;; being turned into lea.
-(define_split
-  [(set (match_operand:DI 0 "register_operand" "")
-	(plus:DI (match_operand:DI 1 "nonimmediate_operand" "")
-		 (match_dup 0)))
-   (clobber (reg:CC 17))]
-  "!rtx_equal_p (operands[0], operands[1])"
-  [(parallel [(set (match_dup 0)
-		   (plus:DI (match_dup 0)
-			    (match_dup 1)))
-	      (clobber (reg:CC 17))])]
-  "")
-
 ;; Convert lea to the lea pattern to avoid flags dependency.
 (define_split
   [(set (match_operand:DI 0 "register_operand" "")
@@ -5850,20 +5780,6 @@
 	   (const_string "alu")))
    (set_attr "mode" "SI")])
 
-;; We may end up with add pattern and operand swapped.  Avoid it
-;; being turned into lea.
-(define_split
-  [(set (match_operand:SI 0 "register_operand" "")
-	(plus:SI (match_operand:SI 1 "nonimmediate_operand" "")
-		 (match_dup 0)))
-   (clobber (reg:CC 17))]
-  "!rtx_equal_p (operands[0], operands[1])"
-  [(parallel [(set (match_dup 0)
-		   (plus:SI (match_dup 0)
-			    (match_dup 1)))
-	      (clobber (reg:CC 17))])]
-  "")
-
 ;; Convert lea to the lea pattern to avoid flags dependency.
 (define_split
   [(set (match_operand 0 "register_operand" "")
@@ -5943,20 +5859,6 @@
 	   ]
 	   (const_string "alu")))
    (set_attr "mode" "SI")])
-
-;; We may end up with add pattern and operand swapped.  Avoid it
-;; being turned into lea.
-(define_split
-  [(set (match_operand:SI 0 "register_operand" "")
-	(plus:SI (match_operand:SI 1 "nonimmediate_operand" "")
-		 (match_dup 0)))
-   (clobber (reg:CC 17))]
-  "!rtx_equal_p (operands[0], operands[1])"
-  [(parallel [(set (match_dup 0)
-		   (plus:SI (match_dup 0)
-			    (match_dup 1)))
-	      (clobber (reg:CC 17))])]
-  "")
 
 ;; Convert lea to the lea pattern to avoid flags dependency.
 (define_split
@@ -6300,20 +6202,6 @@
 	   (const_string "alu"))))
    (set_attr "mode" "HI,HI,SI")])
 
-;; We may end up with add pattern and operand swapped.  Avoid it
-;; being turned into lea.
-(define_split
-  [(set (match_operand:HI 0 "register_operand" "")
-	(plus:HI (match_operand:HI 1 "nonimmediate_operand" "")
-		 (match_dup 0)))
-   (clobber (reg:CC 17))]
-  "!rtx_equal_p (operands[0], operands[1])"
-  [(parallel [(set (match_dup 0)
-		   (plus:HI (match_dup 0)
-			    (match_dup 1)))
-	      (clobber (reg:CC 17))])]
-  "")
-
 (define_insn "*addhi_1"
   [(set (match_operand:HI 0 "nonimmediate_operand" "=rm,r")
 	(plus:HI (match_operand:HI 1 "nonimmediate_operand" "%0,0")
@@ -6562,20 +6450,6 @@
 	   (const_string "incdec")
 	   (const_string "alu"))))
    (set_attr "mode" "QI,QI,SI,SI")])
-
-;; We may end up with add pattern and operand swapped.  Avoid it
-;; being turned into lea.
-(define_split
-  [(set (match_operand:QI 0 "register_operand" "")
-	(plus:QI (match_operand:QI 1 "nonimmediate_operand" "")
-		 (match_dup 0)))
-   (clobber (reg:CC 17))]
-  "!rtx_equal_p (operands[0], operands[1])"
-  [(parallel [(set (match_dup 0)
-		   (plus:QI (match_dup 0)
-			    (match_dup 1)))
-	      (clobber (reg:CC 17))])]
-  "")
 
 (define_insn "*addqi_1"
   [(set (match_operand:QI 0 "nonimmediate_operand" "=qm,q,r")
