--- a/gcc/config/ia64/ia64.md
+++ b/gcc/config/ia64/ia64.md
@@ -4443,9 +4443,9 @@
 		"c,c,c,c,c,c,c,c,c,c,c,c,c,c,c")
 	     (const_int 0)])
 	  (match_operand:DI 2 "move_operand"
-	   "rim, *f, *b,*d*e,rim,rim, rim,*f,*b,*d*e,rO,*f,rOQ,rO,  rK")
+	   "rnm, *f, *b,*d*e,rnm,rnm, rnm,*f,*b,*d*e,rO,*f,rOQ,rO,  rK")
 	  (match_operand:DI 3 "move_operand"
-	   "rim,rim,rim, rim, *f, *b,*d*e,*f,*b,*d*e,rO,*f,rOQ,rO,  rK")))]
+	   "rnm,rnm,rnm, rnm, *f, *b,*d*e,*f,*b,*d*e,rO,*f,rOQ,rO,  rK")))]
   "ia64_move_ok (operands[0], operands[2])
    && ia64_move_ok (operands[0], operands[3])"
   { abort (); }
@@ -4549,9 +4549,9 @@
 	    [(match_operand:BI 1 "register_operand" "c,c,c,c,c,c,c,c,c")
 	     (const_int 0)])
 	  (match_operand:SI 2 "move_operand"
-		    "0,0,0,rim*f,rO,rO,rim*f,rO,rO")
+		    "0,0,0,rnm*f,rO,rO,rnm*f,rO,rO")
 	  (match_operand:SI 3 "move_operand"
-		    "rim*f,rO,rO,0,0,0,rim*f,rO,rO")))]
+		    "rnm*f,rO,rO,0,0,0,rnm*f,rO,rO")))]
   "ia64_move_ok (operands[0], operands[2])
    && ia64_move_ok (operands[0], operands[3])"
   { abort (); }
@@ -5461,7 +5461,7 @@
          [(plus:SI (match_operand:SI 1 "basereg_operand" "r")
                    (match_operand:SI 2 "gr_reg_or_14bit_operand" "rI"))]
          UNSPEC_ADDP4))]
-  ""
+  "addp4_optimize_ok (operands[1], operands[2])"
   "addp4 %0 = %2, %1"
   [(set_attr "itanium_class" "ialu")])
 
@@ -5471,6 +5471,6 @@
          [(plus:SI (match_operand:SI 1 "gr_register_operand" "r")
                    (match_operand:SI 2 "basereg_operand" "r"))]
          UNSPEC_ADDP4))]
-  ""
+  "addp4_optimize_ok (operands[1], operands[2])"
   "addp4 %0 = %1, %2"
   [(set_attr "itanium_class" "ialu")])
